# public-google-ads-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
auth/: README.md  generate_refresh_token.py
deploy/: deploy.sh.example
docs/: PROJECT_MAP.md  REMOTE_DEPLOY.md  TOOLS.md  TOOLS_DESIGN.md
scripts/: generate-refresh-token-windows.ps1  generate-refresh-token.sh  setup-windows-claude-desktop.ps1  smoke_test.py  update_references.py
src/google_ads_mcp/: __init__.py  app.py  auth.py  observability.py  server.py
src/google_ads_mcp/google_ads/: __init__.py  client.py  utils.py
src/google_ads_mcp/resources/: __init__.py  _fetch.py  discovery.py  gaql_resources.txt  metrics.py  release_notes.py  segments.py
src/google_ads_mcp/tools/: __init__.py  accounts.py  constants.py  diagnostics.py  metadata.py  query.py  reporting.py
tests/: test_auth.py  test_tool_contracts.py
