[project]
name = "google-ads-mcp"
version = "0.1.0"
description = "MCP server for Google Ads account data - lets LLM pull live campaign, keyword, and performance data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "google-ads>=25.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27",
    "fastmcp>=3.4.2",
]

[project.urls]
Repository = "https://github.com/VidenGrowth/public-google-ads-mcp"

[project.scripts]
google-ads-mcp = "google_ads_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_ads_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/google_ads_mcp/resources/gaql_resources.txt" = "google_ads_mcp/resources/gaql_resources.txt"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pandas>=2.3.3",
]
